--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-flask
-flask_cors
-requests
-pandas
-numpy
-datetime
-apscheduler
+streamlit==1.46.0
+plotly==5.21.0
+pandas==2.3.0
+numpy==2.3.0
+requests==2.32.4
+flask==3.1.1
+flask-cors==6.0.1
+apscheduler==3.11.0
+datetime==5.5
+pytz==2025.2
+tzlocal==5.3.1
